--- a/discourse-dark.user.css
+++ b/discourse-dark.user.css
@@ -49,6 +49,7 @@ regexp("^https://discuss\\.(rubyonrails|atom|codemirror|elastic|flexget|huel|oca
 regexp("^https://(forum|forums)\.(syncthing|habitat|puri|sonarr|cfx)\.(net|sh|sm|tv|re)/(?!embed/comments).*$"),
 regexp("^https://(\w+\.ruby-forum|zegist)\.com/(?!embed/comments).*$"),
 regexp("^https://nomadlist.com/(?!embed/comments).*$"),
+regexp("^https://github.community/(?!embed/comments).*$"),
 regexp("https?://discourse\\.\\S*/(?!embed/comments).*$"),
 domain("internals.rust-lang.org"),
 domain("bbs.boingboing.net"),
