--- a/discourse-dark.user.css
+++ b/discourse-dark.user.css
@@ -326,8 +326,8 @@ url-prefix("https://www.sitepoint.com/community/") {
     background-color: rgba(52, 52, 52, .4);
   }
   .placeholder-text, .placeholder-avatar, body .dropdown-header,
-  nav.post-controls button.d-hover, .select2-results .select2-highlighted,
-  #topic-progress .bg, .topic-map .buttons .btn:hover {
+  .select2-results .select2-highlighted, #topic-progress .bg,
+  .topic-map .buttons .btn:hover {
     background: #333 !important;
     color: #aaa !important;
     border-color: #444 !important;
@@ -336,11 +336,13 @@ url-prefix("https://www.sitepoint.com/community/") {
   .topic-list .sortable:hover, .d-header-icons .icon:hover,
   .d-header .icons .icon:hover, .category-row.is-highlighted,
   nav.post-controls .show-replies:hover,
-  .drop-down-visible .d-header .icons .icon:hover,
-  nav.post-controls .like-button:hover button.d-hover,
-  .badge-notification.clicks, .emoji-picker .section-group button.emoji:hover,
+  .drop-down-visible .d-header .icons .icon:hover, .badge-notification.clicks,
+  .emoji-picker .section-group button.emoji:hover,
   .emoji-picker .results button.emoji:hover {
     background: #444 !important;
+  }
+  button.like-count:hover, nav.post-controls .double-button:hover .like-count {
+    background-color: transparent !important;
   }
   .ring-backdrop {
     box-shadow: 0 0 0 9999px rgba(29, 29, 29, .85);
@@ -353,8 +355,9 @@ url-prefix("https://www.sitepoint.com/community/") {
     color: #222 !important;
     background: #1ca551 !important;
   }
-  nav.post-controls .double-button:hover button, .topic-map .link-summary, .btn,
-  .topic-map .link-summary .btn {
+  .topic-map .link-summary, .btn, .topic-map .link-summary .btn,
+  nav.post-controls button.d-hover,
+  nav.post-controls .actions .double-button button.button-count + .toggle-like.d-hover {
     background: #333;
     color: #ccc;
   }
