--- a/discourse-dark.user.css
+++ b/discourse-dark.user.css
@@ -1177,18 +1177,29 @@ domain("users.rust-lang.org") {
     background: transparent !important;
   }
 }
+@-moz-document domain("community.roonlabs.com") {
+  img[src*="0aebd8c498737ebb12d34a98771b66d978278595.png"] {
+    filter: invert(1) contrast(70%) brightness(.9);
+  }
+  .nav-pills > li > a:hover {
+    color: #fc967c;
+    background-color: #611501;
+  }
+  .nav-pills > li a.active {
+    color: #fff;
+    background-color: #a32403;
+  }
+}
 @-moz-document domain("discourse.pi-hole.net"),
 domain("discourse.huel.com"),
 domain("discuss.huel.com"),
 domain("discuss.ocaml.org"),
 domain("forum.f-droid.org"),
-domain("community.roonlabs.com"),
 domain("community.gitpod.io") {
   #site-logo.logo-big, #site-logo.logo-small {
     filter: invert(100%) hue-rotate(180deg) brightness(.9) !important;
   }
   img[src*="6afef9981af88307eaf8519944c896e5c9a42245.png"],
-  img[src*="0aebd8c498737ebb12d34a98771b66d978278595.png"],
   img[src*="f010ba1908e9f8f5e6b7a8d1792106b4fcbcd2c9.png"] {
     filter: invert(1) contrast(70%) brightness(.9);
   }
